fixing hero page on small view

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,6 @@ img{
     width: 100%;
 }
 
-
 #achievements{
     padding: 12rem 20px;
     background: linear-gradient(120deg, rgba(08, 08, 08, 0.4), rgb(08, 08, 08)), url('../images/london-backdrop.png');
@@ -263,6 +262,12 @@ img{
 
 @media only screen and (max-width: 768px) {
 
+    #hero-page{
+        display: relative;
+        min-height: 100vh;
+        padding-top: 5rem;
+    }
+
     .img2{
         display: block;
         position: relative;
@@ -295,7 +300,7 @@ img{
         min-height: 100vh;
         color: white;
         font-weight: 800 !important;
-        margin-top: 4rem;
+        margin-top: 0;
 
     }
 
